--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/RCtxf18/face-logo-8252748-1280.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>developer | portfolio</title>
+    <!-- this link for aos animation -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <div id="root"></div>
@@ -12,12 +14,18 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
+<!-- this script for email.js -->
 <script type="text/javascript">
    (function(){
       emailjs.init({
         publicKey: "FsNGnEotqkFaNzhoE",
       });
    })();
+</script>
+<!-- this script for aos animation -->
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
 </script>
   </body>
 </html>
